--- a/pom.xml
+++ b/pom.xml
@@ -207,6 +207,16 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                    <fork>true</fork>
+                    <executable>C:\Program Files\Java\jdk-11.0.12\bin\javac</executable>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
